[package]
edition = "2021"
name = "tempestrs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
time = {version = "0.3.20", features = ["local-offset"]}
rusqlite = { version = "0.30.0", features = ["bundled"] }
