[package]
name = "worker"
version = "0.1.0"
edition = "2021"
authors = [ "Paul Russo <paul@paulrusso.me>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features = ["d1"]}
worker-macros = { version="0.2.0" }
console_error_panic_hook = { version = "0.1.1" }
core = { path = "../core" }
